on() and multiple event handling

--- a/jQuery/style.css
+++ b/jQuery/style.css
@@ -46,7 +46,7 @@ ul{
     background-color: aliceblue;
 }
 
-.second-section{
+.second-section , .third-section{
     margin: 20px 0;
     padding: 20px 0;
     background-color: aliceblue;
